2007-07-02  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): For efficiency, return haystack/rev_start
	immediately if needle is blank.

2007-07-01  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrncasecmp, mbstrncasecmp): For efficiency, return
	zero immediately if s1 and s2 point to the same string.

2007-06-30  David Lawrence Ramsey  <pooka109@gmail.com>

	* prompt.c (do_yesno_prompt): Remove redundant check for
	NO_HELP's being FALSE.

2007-06-28  David Lawrence Ramsey  <pooka109@gmail.com>

	* browser.c (do_browser), nano.c (do_mouse), prompt.c
	(do_statusbar_mouse, do_yesno_prompt): Further simplify
	processing of mouse events by consolidating if clauses.
	* winio.c (do_mouseinput): Return unconditionally if we get a
	mouse event that we don't deal with, instead of inside an else
	clause.

2007-05-29  David Lawrence Ramsey  <pooka109@gmail.com>

	* winio.c (do_mouseinput): Deal with clicks of the first mouse
	button again.  Oddly, ncurses built without --enable-ext-mouse
	needs this, but ncurses built with --enable-ext-mouse doesn't.

2007-05-25  David Lawrence Ramsey  <pooka109@gmail.com>

	* configure.ac, nano.c (main): Replace the current hackish check
	for a UTF-8 locale with a proper call to nl_langinfo().
	* winio.c (get_key_buffer): Fix inaccurate comments.

2007-05-22  David Lawrence Ramsey  <pooka109@gmail.com>

	* browser.c (do_browser), nano.c (do_mouse), prompt.c
	(do_statusbar_mouse, do_yesno_prompt), winio.c (do_mouseinput):
	Simplify processing of mouse events.  Instead of calling
	wenclose() to get the window a mouse event took place in and
	manually adjusting the returned coordinates to be relative to
	that window the mouse event took place in, call wmouse_trafo(),
	which does both.

2007-05-20  David Lawrence Ramsey  <pooka109@gmail.com>

	* browser.c (do_browser), nano.c (do_mouse), prompt.c